cppcheck_report.txt
main.cpp:38:0: information: Include file: "concurrentqueue/concurrentqueue.h" not found. [missingInclude]
#include "concurrentqueue/concurrentqueue.h"
^
Globals.h:21:0: information: Include file: "concurrentqueue/concurrentqueue.h" not found. [missingInclude]
#include "concurrentqueue/concurrentqueue.h"
^
nvdec.h:17:0: information: Include file: "nvcuvid.h" not found. [missingInclude]
#include "nvcuvid.h"
^
nvdec.h:18:0: information: Include file: "cuviddec.h" not found. [missingInclude]
#include "cuviddec.h"
^
renderhostwidgets.h:12:5: style: Class 'RenderHostWidgets' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
    RenderHostWidgets(QWidget* parent = nullptr) : QFrame(parent) {
    ^
mainwindow.h:11:5: style: Class 'MainWindow' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
    MainWindow(QWidget* parent = nullptr) : QMainWindow(parent), ui(new Ui::MainWindow) {
    ^
main.cpp:365:58: style: C-style pointer casting [cstyleCast]
    sendto(udpSocket, endMessage, strlen(endMessage), 0, (sockaddr*)&serverAddr, sizeof(serverAddr));
                                                         ^
main.cpp:375:66: style: C-style pointer casting [cstyleCast]
        sendto(udpSocket, startMessage, strlen(startMessage), 0, (sockaddr*)&serverAddr, sizeof(serverAddr));
                                                                 ^
main.cpp:381:68: style: C-style pointer casting [cstyleCast]
            sendto(udpSocket, data.data() + offset, packetSize, 0, (sockaddr*)&serverAddr, sizeof(serverAddr));
                                                                   ^
main.cpp:386:62: style: C-style pointer casting [cstyleCast]
        sendto(udpSocket, endMessage, strlen(endMessage), 0, (sockaddr*)&serverAddr, sizeof(serverAddr));
                                                             ^
main.cpp:852:34: style: C-style pointer casting [cstyleCast]
    if (bind(listenSocketStart, (struct sockaddr*)&serverAddr, sizeof(serverAddr)) == SOCKET_ERROR) {
                                 ^
main.cpp:871:32: style: C-style pointer casting [cstyleCast]
    if (bind(listenSocketEnd, (struct sockaddr*)&serverAddr, sizeof(serverAddr)) == SOCKET_ERROR) {
                               ^
main.cpp:385:21: style: Local variable 'endMessage' shadows outer variable [shadowVariable]
        const char* endMessage = "END";
                    ^
main.cpp:364:17: note: Shadowed declaration
    const char* endMessage = "END";
                ^
main.cpp:385:21: note: Shadow variable
        const char* endMessage = "END";
                    ^
main.cpp:413:15: style: Variable 'v' can be declared as reference to const [constVariableReference]
        auto& v = rb[rbHead].buf;
              ^
main.cpp:764:49: performance: Searching before insertion is not necessary. Instead of 'frameBuf[shardIndex]=std::move(parsedInfo.shardData)' consider using 'frameBuf.try_emplace(shardIndex, std::move(parsedInfo.shardData));'. [stlFindInsert]
                frameBuf[shardIndex] = std::move(parsedInfo.shardData);
                                                ^
main.cpp:976:14: performance: Ineffective call of function 'substr' because a prefix of the string is assigned to itself. Use resize() or pop_back() instead. [uselessCallsSubstr]
    exeDir = exeDir.substr(0, exeDir.find_last_of("\\/"));
             ^
main.cpp:580:56: style: Consider using std::accumulate algorithm instead of a raw loop. [useStlAlgorithm]
                                total_reassembled_size += kv.second.size();
                                                       ^
main.cpp:841:9: style: Variable 'addrLen' is assigned a value that is never used. [unreadVariable]
    int addrLen = sizeof(serverAddr);
        ^
window.cpp:1732:42: style: Variable 'newFrameFromReorder.copyDone' is assigned a value that is never used. [unreadVariable]
            newFrameFromReorder.copyDone = nullptr; // Ownership transferred to cache
                                         ^
window.cpp:1738:34: style: Variable 'frameToDraw.copyDone' is assigned a value that is never used. [unreadVariable]
            frameToDraw.copyDone = nullptr;
                                 ^
window.cpp:2073:30: style: Variable 'shouldPresent' is assigned a value that is never used. [unreadVariable]
    const bool shouldPresent = frameWasRendered || forcePresent;
                             ^
Globals.h:40:12: error: Code 'C++ cast <...' is invalid C code. Use --std or --language to configure the language. [syntaxError]
    return static_cast<uint64_t>(
           ^
Globals.h:102:0: style: The function 'PointerToWString' is never used. [unusedFunction]
std::wstring PointerToWString(T* ptr) {
^
main.cpp:952:0: style: The function 'wWinMain' is never used. [unusedFunction]
int WINAPI wWinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, PWSTR lpCmdLine, int nCmdShow) {
^
window.cpp:2219:0: style: The function 'CleanupD3DRenderResources' is never used. [unusedFunction]
void CleanupD3DRenderResources() {
^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]
